[package]
name = "geng-utils"
authors = ["Nertsal <nestralnertsal@gmail.com>"]
version = "0.3.0"
description = "A collection of utilities for Geng engine."
documentation = "https://docs.rs/geng-utils"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Nertsal/geng-utils"
keywords = ["game", "utility", "gamedev", "geng"]
categories = ["game-development"]

[dependencies]
geng = "0.18"
image = "0.25.2"
serde = { version = "1", features = ["derive"] }

[patch.crates-io]
geng = { git = "https://github.com/geng-engine/geng", rev = "ad453b8b1023ad5ac6992309efb11b0e038c8cfb" } # TODO: remove once 0.18 is on crates
